#Chore Misc code smell fixes