@@ -1,6 +1,5 @@
 package nz.ac.canterbury.seng302.portfolio.service;
 
-import nz.ac.canterbury.seng302.portfolio.controller.EventController;
 import nz.ac.canterbury.seng302.portfolio.model.Event;
 import nz.ac.canterbury.seng302.portfolio.model.EventRepository;
 import nz.ac.canterbury.seng302.portfolio.model.Project;
@@ -26,7 +25,7 @@ import java.util.stream.Collectors;
 public class EventService {
     @Autowired private EventRepository eventRepository;
     @Autowired private ProjectRepository projectRepository;
-    private Logger logger = LoggerFactory.getLogger(EventController.class);
+    private Logger logger = LoggerFactory.getLogger(EventService.class);
 
 
     public EventService(ProjectRepository projectRepository, EventRepository eventRepository) {
@@ -57,13 +56,12 @@ public class EventService {
         int currentNumber = eventRepository.findByProject(project).size() + 1;
 
         LocalDate now = LocalDate.now();
-        Event newEvent = new Event.Builder()
+        return new Event.Builder()
                 .project(project)
                 .eventName("New Event " + currentNumber)
                 .startDate(java.sql.Date.valueOf(now))
                 .endDate(java.sql.Date.valueOf(now.plusDays(1)))
                 .build();
-        return newEvent;
     }
 
     /**
@@ -77,10 +75,9 @@ public class EventService {
                     .findByProject(project)
                     .stream()
                     .sorted(Comparator.comparing(Event::getStartDate))
-                    .collect(Collectors.toList()))
+                    .toList())
                 .orElse(List.of());
     }
-
 
     /**
      * Verifies the event date and time
@@ -132,10 +129,10 @@ public class EventService {
             message = "Successfully Saved " + event.getEventName();
         }
         try {
-            event = eventRepository.save(event);
+            eventRepository.save(event);
             return message;
         } catch (PersistenceException e) {
-            logger.error("Failure Saving Event", e);
+            logger.error("Failure Saving Event {}", event.getEventId(), e);
             throw new IncorrectDetailsException("Failure Saving Event");
         }
     }
